milli/src/search/new/tests/snapshots/milli__search__new__tests__typo__typo_bucketing-2.snap
---
source: milli/src/search/new/tests/typo.rs
expression: "format!(\"{document_scores:#?}\")"
---
[
    [],
    [],
    [],
    [],
    [],
    [],
]
