milli/src/search/new/tests/snapshots/milli__search__new__tests__typo__typo_synonyms-2.snap
---
source: milli/src/search/new/tests/typo.rs
expression: "format!(\"{document_scores:#?}\")"
---
[
    [
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 10,
            },
        ),
    ],
    [
        Typo(
            Typo {
                typo_count: 0,
                max_typo_count: 10,
            },
        ),
    ],
    [
        Typo(
            Typo {
                typo_count: 1,
                max_typo_count: 10,
            },
        ),
    ],
]
